k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photos
  labels:
    name: photos
